[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/Picross/Picross.tscn" type="PackedScene" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_UIRayCast.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/MainMenu/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_MixedRealityCapture.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/rooms/BasicRoom.gd" type="Script" id=5]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Locomotion_Stick.tscn" type="PackedScene" id=6]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_RigidBodyGrab.tscn" type="PackedScene" id=7]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_VRSimulator.tscn" type="PackedScene" id=8]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=9]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=10]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLogWindow.tscn" type="PackedScene" id=11]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/CubeRaycast/CubeRaycast.tscn" type="PackedScene" id=13]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=14]
[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/Picross/EditablePicross.tscn" type="PackedScene" id=16]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 8, 1.132, 8 )

[node name="BasicRoom" type="Spatial"]
script = ExtResource( 5 )

[node name="OQ_ARVROrigin" parent="." instance=ExtResource( 12 )]

[node name="Feature_VRSimulator" parent="OQ_ARVROrigin" instance=ExtResource( 8 )]

[node name="OQ_ARVRCamera" parent="OQ_ARVROrigin" instance=ExtResource( 9 )]

[node name="OQ_LeftController" parent="OQ_ARVROrigin" instance=ExtResource( 15 )]

[node name="Feature_RigidBodyGrab" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 7 )]
rumble_on_grab = true
rumble_on_grabbable = true

[node name="OQ_RightController" parent="OQ_ARVROrigin" instance=ExtResource( 14 )]

[node name="Feature_UIRayCast" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 2 )]
visible = false
ui_raycast_visible_button = -1

[node name="Feature_RigidBodyGrab" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 7 )]
rumble_on_grab = true
rumble_on_grabbable = true

[node name="CubeRaycast" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.0235081 )

[node name="Locomotion_Stick" parent="OQ_ARVROrigin" instance=ExtResource( 6 )]

[node name="Feature_MixedRealityCapture" parent="OQ_ARVROrigin" instance=ExtResource( 4 )]

[node name="OQ_UI2DLogWindow" parent="." instance=ExtResource( 11 )]
transform = Transform( -4, 0, -8.74228e-08, 1.74846e-07, 3.4641, -0.5, 3.02841e-07, -2, -0.866025, 0, 3, 2 )

[node name="Picross" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.69984, -0.706842 )

[node name="EditablePicross" parent="." instance=ExtResource( 16 )]
visible = false

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.13323, 0 )
shape = SubResource( 1 )

[node name="MainMenuCanvas" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.39513, -2.55497 )
out_is_negative_z = true

[node name="MainMenu" parent="MainMenuCanvas" instance=ExtResource( 3 )]
